[package]
name = "spectro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
approx = "0.5.1"
symm = { git = "https://github.com/ntBre/symm", rev = "a5c1a21" }
tensor = { git = "https://github.com/ntBre/tensor", rev = "0d2913e" }

[dev-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[[bin]]
name = "spectro"
path = "src/main.rs"
