[package]
name = "spectro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
symm = { git = "https://github.com/ntBre/symm" }
tensor = { git = "https://github.com/ntBre/tensor" }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
approx = "0.5.1"

[[bin]]
name = "prof"
