[package]
name = "spectro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
symm = { git = "https://github.com/ntBre/symm" }
tensor = { git = "https://github.com/ntBre/tensor" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.125"

[dev-dependencies]
approx = "0.5.1"

[[bin]]
name = "prof"

[features]
polyad = []