[package]
name = "spectro_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectro = { path = "../spectro" }
clap = { version = "4.5.16", features = ["derive"] }
# serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.117"

[features]
polyad = ["spectro/polyad"]